# cxx-tracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  tmp
docs/: OpenGL_VRML Materials.html
docs/OpenGL_VRML Materials_files/: css2
maths/: CMakeLists.txt
maths/inc/maths/: maths.h  matrix.h  vector.h
maths/src/: maths.cpp  matrix.cpp  vector.cpp
maths/src/tpp/: matrix.tpp  matrix_impl.tpp  vector.tpp  vector_impl.tpp
tracer/: CMakeLists.txt  stb_image_write.h  tracer.cpp  tracer.h
tracer/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
tracer/src/geometry/: intersection.h  ray.h
tracer/src/geometry/objects/: object_base.h  plane.cpp  plane.h
tracer/src/light/: point_light.h
tracer/src/raytrc/: const.h  world.cpp  world.h
tracer/src/raytrc/acceleration/: acceleration_structure.h  basic_accel.cpp  basic_accel.h  bvh.cpp  bvh.h
tracer/src/raytrc/cameras/: camera.h  pinhole_camera.cpp  pinhole_camera.h  ss_lense_camera.cpp  ss_lense_camera.h  ss_pinhole_camera.cpp  ss_pinhole_camera.h
tracer/src/raytrc/geometry/: intersection.h  ray.cpp  ray.h
tracer/src/raytrc/geometry/bounding_volumes/: aabb.cpp  aabb.h
tracer/src/raytrc/geometry/cameras/: camera.h  pinhole_camera.cpp  pinhole_camera.h  ss_lense_camera.cpp  ss_lense_camera.h  ss_pinhole_camera.cpp  ss_pinhole_camera.h
tracer/src/raytrc/geometry/objects/: aabb.cpp  aabb.h  material.cpp  material.h  object_base.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
tracer/src/raytrc/light/: ambient_light.cpp  ambient_light.h  light_source.h  lighting_model.cpp  lighting_model.h  point_light.cpp  point_light.h  sphere_light.cpp  sphere_light.h
tracer/src/raytrc/materials/: material.h
tracer/src/raytrc/materials/mapping/: cube_mapping.cpp  cube_mapping.h  latlng_mapping.cpp  latlng_mapping.h  planar_mapping.cpp  planar_mapping.h  spherical_mapping.cpp  spherical_mapping.h  texture_mapping.h  uv_mapping.h  zero_mapping.cpp  zero_mapping.h
tracer/src/raytrc/materials/texture/: aocclusion_texture.cpp  aocclusion_texture.h  const_texture.cpp  const_texture.h  diffuse_texture.cpp  diffuse_texture.h  environment_texture.cpp  environment_texture.h  gloss_texture.cpp  gloss_texture.h  image_texture.cpp  image_texture.h  normal_texture.cpp  normal_texture.h  specular_texture.cpp  specular_texture.h  texture.h  texture_enums.h
tracer/src/raytrc/sampling/: random.cpp  random.h  sampler.h
tracer/src/raytrc/texture/: aocclusion_texture.h  const_texture.cpp  const_texture.h  diffuse_texture.h  environment_texture.cpp  environment_texture.h  gloss_texture.cpp  gloss_texture.h  image_texture.cpp  image_texture.h  normal_texture.h  specular_texture.h  texture.h  texture_enums.h
tracer/src/raytrc/texture/mapping/: cube_mapping.cpp  cube_mapping.h  latlng_mapping.cpp  latlng_mapping.h  planar_mapping.cpp  planar_mapping.h  spherical_mapping.cpp  spherical_mapping.h  texture_mapping.h  zero_mapping.cpp  zero_mapping.h
